<resources>
    <string name="app_name">CockTail Party</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>

    #Addevent

    <string name="event_title">Title</string>
    <string name="event_genre">Genre</string>
    <string name="event_description">Description</string>
    <string name="event_date">Pick a Date</string>
    <string name="event_time">Pick a Time</string>
    <string name="event_picture">Click Picture</string>
    <string name="event_post">Add the event</string>

</resources>
