<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/WhiteToolBar"
        app:popupTheme="@style/Theme.AppCompat.NoActionBar"
        app:titleTextColor="#FFFFFF">

        <TextView
            android:id="@+id/toolbar_text_view__title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="ADD EVENT"
            android:textColor="#FFFFFF" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:text="@string/event_title"
        android:layout_marginTop="10dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="150dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="38dp"
        android:layout_toRightOf="@+id/tv1" />

    <TextView
        android:text="@string/event_genre"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/tv1"
        android:id="@+id/tv2"
        android:visibility="gone"
        android:textSize="30sp"
        />
    <EditText
        android:layout_width="150dp"
        android:id="@+id/genre"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/title"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv2"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/tv3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/event_description"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genre"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="38dp"
        android:layout_toRightOf="@+id/tv3"
        android:maxLines="5" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/event_date"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/date"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="38dp"
        android:layout_toRightOf="@+id/tv3"
        android:clickable="true"
        android:editable="false"
        android:focusable="false" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/event_time"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/time"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="38dp"
        android:layout_toRightOf="@+id/tv5"
        android:clickable="true"
        android:editable="false"
        android:focusable="false" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/event_picture"
        android:textSize="24sp" />

    <ImageButton
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/time"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="38dp"
        android:layout_toRightOf="@+id/tv6" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/event_post"
        android:layout_marginBottom="20dp"
        android:textSize="28sp"
        android:id="@+id/submit"
        android:layout_below="@+id/image"
        android:layout_centerInParent="true"/>

</RelativeLayout>
